drivers/misc: Introduce kernelspace battery saver mode
Signed-off-by: topser9 <topser181@gmail.com>

--- a/arch/arm64/configs/exynos850-a21snsxx_defconfig
+++ b/arch/arm64/configs/exynos850-a21snsxx_defconfig
@@ -1415,6 +1415,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_SRAM is not set
 CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
+CONFIG_BATTERY_SAVER=y
 # CONFIG_C2PORT is not set
 
 #
