arm64: lse: Fix LSE atomics with LLVM's integrated assembler
Change-Id: I5201e7981c47dd68dfca22e19c4c6859ae1f2357

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -35,6 +35,13 @@ KBUILD_DEFCONFIG := defconfig
 # Check for binutils support for specific extensions
 lseinstr := $(call as-instr,.arch_extension lse,-DCONFIG_AS_LSE=1)
 
+ifeq ($(CONFIG_ARM64_LSE_ATOMICS),y)
+  ifeq ($(cc-name),clang)
+lseinstr := -DCONFIG_AS_LSE=1
+KBUILD_CFLAGS += -march=armv8-a+lse
+  endif
+endif
+
 ifeq ($(CONFIG_ARM64_LSE_ATOMICS), y)
   ifeq ($(lseinstr),)
 $(warning LSE atomics not supported by binutils)
