drivers: nfc: Import 'nfc' changes from the a21s
Taken from the SM-A217M model.

--- a/arch/arm64/configs/exynos850-a21snsxx_defconfig
+++ b/arch/arm64/configs/exynos850-a21snsxx_defconfig
@@ -1268,29 +1268,23 @@ CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 CONFIG_SAMSUNG_NFC=y
-# CONFIG_SEC_NFC is not set
-CONFIG_NFC_PVDD_LATE_ENABLE=y
+
+#
+# Near Field Communication (NFC) devices
+#
+CONFIG_SEC_NFC=y
 # CONFIG_ESE_P3_LSI is not set
-# CONFIG_MAKE_NODE_USING_PLATFORM_DEVICE is not set
 # CONFIG_ESE_FACTORY_ONLY is not set
-# CONFIG_ESE_SECURE is not set
-CONFIG_ESE_USE_TZ_API=y
-CONFIG_SEC_NFC_LOGGER=y
-# CONFIG_SEC_NFC_DUPLICATED_IRQ_WQ_LSI is not set
-# CONFIG_SEC_NFC_DUPLICATED_IRQ_WQ_QC is not set
-CONFIG_SEC_NFC_WAKELOCK_METHOD=0
-CONFIG_NFC_PN547=y
-CONFIG_NFC_FEATURE_SN100U=y
-# CONFIG_NFC_PN547_CLK_BBCLK2 is not set
+# CONFIG_NFC_PN547 is not set
 # CONFIG_NFC_P61 is not set
-# CONFIG_NFC_PN547_ESE_SUPPORT is not set
-# CONFIG_NFC_PN547_LDO_CONTROL is not set
-# CONFIG_SEC_NFC_LOGGER_ADD_ACPM_LOG is not set
-# CONFIG_NFC_QTI_I2C is not set
-CONFIG_SEC_NFC_COMPAT_IOCTL=y
-# CONFIG_SEC_STAR is not set
-# CONFIG_STAR_MEMORY_LEAK is not set
-# CONFIG_STAR_K250A is not set
+# CONFIG_ESE_SECURE is not set
+CONFIG_ESE_SECURE_SPI_PORT=99
+CONFIG_ESE_SECURE_USI_MODE=99
+CONFIG_ESE_SECURE_GPIO=""
+# CONFIG_ESE_COFFEE is not set
+# CONFIG_NFC_PN533_USB is not set
+# CONFIG_NFC_PN533_I2C is not set
+CONFIG_SEC_NFC_LOGGER=y
 # CONFIG_PSAMPLE is not set
 # CONFIG_NET_IFE is not set
 # CONFIG_LWTUNNEL is not set
@@ -3487,10 +3481,10 @@ CONFIG_SND_SOC_SAMSUNG_SYSFS_EARJACK=y
 CONFIG_SND_SOC_SAMSUNG_ABOX=y
 CONFIG_SND_SOC_SAMSUNG_ABOX_VERSION=0x23000
 CONFIG_SND_SOC_SAMSUNG_ABOX_V3=y
-CONFIG_SND_SOC_SAMSUNG_ABOX_DRAM_SIZE=0x1400000
+CONFIG_SND_SOC_SAMSUNG_ABOX_DRAM_SIZE=0x1200000
 # CONFIG_SEC_SND_ADAPTATION is not set
 # CONFIG_SND_SOC_ABOX_NOCP is not set
-CONFIG_SND_SOC_SAMSUNG_ABOX_CHANGE_RMEM_SIZE=y
+# CONFIG_SND_SOC_SAMSUNG_ABOX_CHANGE_RMEM_SIZE is not set
 # CONFIG_SND_SOC_SAMSUNG_MAILBOX is not set
 
 #
@@ -3541,7 +3535,7 @@ CONFIG_SND_SOC_AUD3004X=y
 CONFIG_SND_SOC_AUD3004X_5PIN=y
 # CONFIG_SND_SOC_AUD3004X_6PIN is not set
 # CONFIG_SND_SOC_AUD3004X_EXT_ANT is not set
-# CONFIG_SND_SOC_SMA1303 is not set
+CONFIG_SND_SOC_SMA1303=y
 # CONFIG_SND_SOC_SMA1305 is not set
 # CONFIG_SND_SOC_ES7134 is not set
 # CONFIG_SND_SOC_ES7241 is not set
