drivers: video: Import 'decon' changes for the a21s
The a21s uses different hardware for the screen compared
to the a13, so a new panel driver is required.

--- a/arch/arm64/configs/exynos850-a21snsxx_defconfig
+++ b/arch/arm64/configs/exynos850-a21snsxx_defconfig
@@ -3306,7 +3306,7 @@ CONFIG_EXYNOS_DSIM_DITHER=y
 # CONFIG_EXYNOS_PLL_SLEEP is not set
 # CONFIG_EXYNOS_EWR is not set
 # CONFIG_EXYNOS_LIMIT_ROTATION is not set
-# CONFIG_EXYNOS_DPU_SYSTRACE is not set
+CONFIG_EXYNOS_DPU_SYSTRACE=y
 CONFIG_EXYNOS_COMMON_PANEL=y
 # CONFIG_EXYNOS_DECON_LCD_CABC is not set
 CONFIG_EXYNOS_DECON_LCD=y
@@ -3324,7 +3324,7 @@ CONFIG_PANEL_AID_DIMMING=y
 # CONFIG_EXTEND_LIVE_CLOCK is not set
 # CONFIG_PANEL_BACKLIGHT_PAC_3_0 is not set
 # CONFIG_DISPLAY_USE_INFO is not set
-CONFIG_PANEL_NOTIFY=y
+# CONFIG_PANEL_NOTIFY is not set
 # CONFIG_SUPPORT_POC_SPI is not set
 CONFIG_SUPPORT_I2C=y
 # CONFIG_DYNAMIC_FREQ is not set
@@ -3334,10 +3334,10 @@ CONFIG_SUPPORT_ERRFG_RECOVERY_BY_FB_BLANK=y
 # CONFIG_EXYNOS_DECON_LCD_DUMMY_LCD_V320 is not set
 # CONFIG_EXYNOS_DECON_LCD_FT8203_BOE_T260 is not set
 # CONFIG_EXYNOS_DECON_LCD_HX83102_T270 is not set
-CONFIG_EXYNOS_DECON_LCD_HX83112F_BOE_A13=y
-CONFIG_EXYNOS_DECON_LCD_NT36672C_CSOT_A13=y
-CONFIG_EXYNOS_DECON_LCD_NT36672C_TIANMA_A13=y
-CONFIG_EXYNOS_DECON_LCD_TD4375_BOE_A13=y
+# CONFIG_EXYNOS_DECON_LCD_HX83112F_BOE_A13 is not set
+# CONFIG_EXYNOS_DECON_LCD_NT36672C_CSOT_A13 is not set
+# CONFIG_EXYNOS_DECON_LCD_NT36672C_TIANMA_A13 is not set
+# CONFIG_EXYNOS_DECON_LCD_TD4375_BOE_A13 is not set
 # CONFIG_EXYNOS_DECON_LCD_ILI7807_BOE_M13 is not set
 # CONFIG_EXYNOS_DECON_LCD_HX83112F_BOE_M13 is not set
 # CONFIG_EXYNOS_DECON_LCD_FT8720_DTC_M13 is not set
@@ -3348,6 +3348,10 @@ CONFIG_EXYNOS_DECON_LCD_TD4375_BOE_A13=y
 # CONFIG_EXYNOS_DECON_LCD_NT36525C_TIANMA_A04S is not set
 # CONFIG_EXYNOS_DECON_LCD_NT36525C_DTC_A04S is not set
 # CONFIG_EXYNOS_DECON_LCD_NT36672C_TIANMA_A14 is not set
+# CONFIG_EXYNOS_DECON_LCD_EA8076_A21S is not set
+CONFIG_EXYNOS_DECON_LCD_TD4150_A21S=y
+CONFIG_EXYNOS_DECON_LCD_HX83104_A21S=y
+CONFIG_EXYNOS_DECON_LCD_NT36575_A21S=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
