--- a/drivers/video/fbdev/exynos/panel/Makefile
+++ b/drivers/video/fbdev/exynos/panel/Makefile
@@ -38,3 +38,9 @@ obj-$(CONFIG_EXYNOS_DECON_LCD_NT36525C_TIANMA_A04S) += nt36525c_tianma/nt36525c_
 obj-$(CONFIG_EXYNOS_DECON_LCD_NT36525C_DTC_A04S) += nt36525c_dtc/nt36525c_dtc.o
 obj-$(CONFIG_EXYNOS_DECON_LCD_NT36672C_TIANMA_A14) += nt36672c_tianma_a14/nt36672c_tianma.o
 
+obj-$(CONFIG_EXYNOS_DECON_LCD_EA8076_A21S) += ea8076/ea8076.o ea8076/ea8076_aod.o
+obj-$(CONFIG_EXYNOS_DECON_LCD_TD4150_A21S) += td4150/td4150.o
+obj-$(CONFIG_EXYNOS_DECON_LCD_HX83104_A21S) += hx83104/hx83104.o
+obj-$(CONFIG_EXYNOS_DECON_LCD_NT36575_A21S) += nt36575/nt36575.o
+
+
