drivers: power: Add missing power nodes to sysfs
This exposes the required sysfs nodes for our battery to the
android Health HAL.

--- a/arch/arm64/configs/exynos850-a21snsxx_defconfig
+++ b/arch/arm64/configs/exynos850-a21snsxx_defconfig
@@ -2415,7 +2415,11 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 # CONFIG_BATTERY_S2MU00X is not set
+CONFIG_FUELGAUGE_S2MU106=y
+CONFIG_CHARGER_S2MU106=y
+CONFIG_PM_S2MU106=y
 # CONFIG_MANAGER_S2M_CHARGER is not set
+# CONFIG_FUELGAUGE_S2MU107 is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_DEBUG_CHIP is not set
 
@@ -5379,10 +5383,7 @@ CONFIG_HV_MUIC_S2MU106_AFC=y
 CONFIG_MUIC_S2MU106_RID=y
 # CONFIG_MUIC_NOT_SUPPORT_QC is not set
 # CONFIG_MUIC_HV_SUPPORT_POGO_DOCK is not set
-CONFIG_FUELGAUGE_S2MU106=y
 CONFIG_FUELGAUGE_S2MU106_USE_5MILLIOHM=y
-CONFIG_CHARGER_S2MU106=y
-CONFIG_PM_S2MU106=y
 CONFIG_LSI_IFPMIC=y
 
 #
