--- a/arch/arm64/configs/exynos850-a21snsxx_defconfig
+++ b/arch/arm64/configs/exynos850-a21snsxx_defconfig
@@ -1477,18 +1477,17 @@ CONFIG_SCSC_WLBT_CONFIG_PLATFORM=""
 CONFIG_SCSC_CORE_FW_LOCATION="/vendor/etc/wifi"
 CONFIG_SCSC_CORE_TOOL_LOCATION="/vendor/bin"
 CONFIG_SCSC_MXLOGGER=y
-# CONFIG_SCSC_SMAPPER is not set
+CONFIG_SCSC_SMAPPER=y
 # CONFIG_SCSC_WLBTD is not set
-# CONFIG_SCSC_WRITE_INFO_FILE_WLBTD is not set
-# CONFIG_SCSC_QOS is not set
+CONFIG_SCSC_QOS=y
 CONFIG_SCSC_PLATFORM=y
 CONFIG_SCSC_CM_MX_CLIENT_TEST=y
 # CONFIG_SCSC_MX_ALWAYS_ON is not set
 # CONFIG_SCSC_CLK20MHZ is not set
 CONFIG_SCSC_FM=y
-CONFIG_SCSC_FM_TEST=y
+# CONFIG_SCSC_FM_TEST is not set
 CONFIG_SCSC_MMAP=y
-CONFIG_SCSC_DBG_SAMPLER=y
+# CONFIG_SCSC_DBG_SAMPLER is not set
 # CONFIG_SCSC_DEBUG_COMPATIBILITY is not set
 CONFIG_SCSC_LOGRING=y
 CONFIG_SCSC_STATIC_RING=y
@@ -1505,7 +1504,7 @@ CONFIG_SCSC_COMMON_HCF=y
 # CONFIG_SCSC_MX152_EXT_DUAL_FEM is not set
 CONFIG_SCSC_BT=y
 # CONFIG_SCSC_BT_BLUEZ is not set
-# CONFIG_SCSC_ANT is not set
+CONFIG_SCSC_ANT=y
 # CONFIG_SCSC_BT_ADDRESS_IN_FILE is not set
 CONFIG_SCSC_BT_ADDRESS_FILENAME="/mnt/vendor/efs/bluetooth/bt_addr"
 # CONFIG_SAMSUNG_KIC is not set
@@ -1848,7 +1847,7 @@ CONFIG_WLAN_VENDOR_ZYDAS=y
 CONFIG_WLAN_VENDOR_QUANTENNA=y
 CONFIG_SCSC_WLAN=y
 CONFIG_SCSC_WLAN_KEY_MGMT_OFFLOAD=y
-# CONFIG_SCSC_WLAN_HIP4_PROFILING is not set
+CONFIG_SCSC_WLAN_HIP4_PROFILING=y
 # CONFIG_SCSC_WLAN_DEBUG is not set
 CONFIG_SCSC_WLAN_SG=y
 CONFIG_SCSC_WLAN_RX_NAPI=y
@@ -1869,12 +1868,12 @@ CONFIG_SCSC_WLAN_MAX_INTERFACES=12
 CONFIG_SCSC_WLAN_AP_INFO_FILE=y
 CONFIG_SCSC_WLAN_WIFI_SHARING=y
 CONFIG_SCSC_WLAN_SAE_CONFIG=y
-CONFIG_SCSC_WLAN_SAE_PWE=y
+# CONFIG_SCSC_WLAN_SAE_PWE is not set
 CONFIG_SCSC_WLAN_ENABLE_MAC_RANDOMISATION=y
-CONFIG_SCSC_WLAN_SINGLE_ANTENNA=y
+# CONFIG_SCSC_WLAN_SINGLE_ANTENNA is not set
 CONFIG_SCSC_AP_INTERFACE_NAME="wlan1"
 CONFIG_SCSC_WLAN_ACS_ENABLE=y
-CONFIG_SCSC_WLAN_MHS_STATIC_INTERFACE=y
+# CONFIG_SCSC_WLAN_MHS_STATIC_INTERFACE is not set
 # CONFIG_SCSC_WIFI_NAN_ENABLE is not set
 # CONFIG_SCSC_WLAN_ENHANCED_PKT_FILTER is not set
 # CONFIG_SCSC_WLAN_NUM_ANTENNAS is not set
@@ -1883,7 +1882,7 @@ CONFIG_SCSC_WLAN_MHS_STATIC_INTERFACE=y
 CONFIG_SCSC_WLAN_SET_PREFERRED_ANTENNA=y
 CONFIG_SLSI_WLAN_STA_FWD_BEACON=y
 # CONFIG_SCSC_WLAN_STA_ENHANCED_ARP_DETECT is not set
-CONFIG_SCSC_WLAN_SILENT_RECOVERY=y
+# CONFIG_SCSC_WLAN_SILENT_RECOVERY is not set
 # CONFIG_SCSC_WLAN_DUAL_STATION is not set
 # CONFIG_SCSC_WLAN_MAX_LINK_SPEED is not set
 CONFIG_SCSC_WLAN_ARP_FLOW_CONTROL=y
