--- a/arch/arm64/boot/dts/samsung/a21s/a21s_eur_open_w00_r06.dts
+++ b/arch/arm64/boot/dts/samsung/a21s/a21s_eur_open_w00_r06.dts
@@ -1738,8 +1738,7 @@
 					phandle = <0x72>;
 
 					vbmeta {
-						compatible = "android,vbmeta";
-						parts = "vbmeta,boot,system,vendor,product,odm,prism,optics,vbmeta_samsung,recovery,dtbo,keystorage";
+						status = "disabled";
 					};
 				};
 			};
