KernelSU: Disable CONFIG_KPROBES ksu code

--- a/arch/arm64/configs/exynos850-a21snsxx_defconfig
+++ b/arch/arm64/configs/exynos850-a21snsxx_defconfig
@@ -196,6 +196,7 @@ CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
+CONFIG_HAVE_ARCH_USERFAULTFD_MINOR=y
 CONFIG_MEMBARRIER=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_ALL is not set
@@ -597,6 +598,8 @@ CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
+CONFIG_HAVE_MOVE_PUD=y
+CONFIG_HAVE_MOVE_PMD=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
 CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
@@ -5431,9 +5434,7 @@ CONFIG_BATTERY_NOTIFIER=y
 # KernelSU
 #
 CONFIG_KSU=y
-# CONFIG_KSU_WITH_KPROBES is not set
 CONFIG_KSU_DEBUG=y
-CONFIG_KSU_ALLOWLIST_WORKAROUND=y
 
 #
 # File systems
